<resources>
    <string name="app_name">Levelate</string>
    <string name="heading_sign_in">Sign In</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_password">Password</string>
    <string name="btn_submit_text">Submit</string>
    <string name="forgot_password_txt"><u>Forgot Password?</u></string>
    <string name="sign_up_txt"><u>Sign Up!</u></string>
    <string name="heading_sign_up">Sign Up!</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_age">Age</string>
    <string name="accept_text"><![CDATA[Tick off Clearance for exercise and T&Cs document]]></string>
    <string name="nutrition_text">Nutrition</string>
    <string name="mind_set">Mindset</string>
    <string name="menu_training">Training</string>
    <string name="menu_my_account">My Account</string>
    <string name="heading_dashboard">Dashboard</string>
    <string name="steps_count">10000</string>
    <string name="steps_heading">Step Target</string>
    <string name="calories_steps_count">2000</string>
    <string name="calories_target_heading">Calorie Target</string>
    <string name="steps_weight">65</string>
    <string name="weight_heading">Current Weight</string>
    <string name="challenges_completed">Challenges Completed</string>
    <string name="heading_nutrition">Nutrition</string>
    <string name="custom_macros">Custom Macros</string>
    <string name="week_steps_count">1</string>
    <string name="week_heading">Current Wk No.</string>
    <string name="my_meal_plan">My Meals Plan</string>
    <string name="recipe">Recipe Library</string>
    <string name="check_in">Check In</string>
    <string name="heading_my_meal_plan">My Meal Plan</string>
    <string name="create_own_meal">Create my own meal plan</string>
    <string name="customise_meal_for_me">Customise my meal for me</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="heading_own_meal_plan">Create My Own Meal Plan</string>
    <string name="heading_meal">Meal</string>
    <string name="heading_add_meal">Add Your Meal</string>
    <string name="heading_desert">Dessert</string>
    <string name="heading_add_desert">Add Your Dessert</string>
    <string name="btn_save_text">Save</string>
    <string name="type">Type...</string>
    <string name="heading_breakfast">Breakfast</string>
    <string name="view_all">View All</string>
    <string name="heading_lunch">Lunch</string>
    <string name="heading_dinner">Dinner</string>
    <string name="heading_filter">Filter</string>
    <string name="view">View</string>
    <string name="heading_cource">Cource - </string>
    <string name="heading_keyword">Keyword - </string>
    <string name="italian_pizza">Italian Pizza</string>
    <string name="heading_calories">Calories</string>
    <string name="heading_category">Category</string>
    <string name="heading_ingratians">INGRATIANS</string>

    <string name="text_with_bullet1">\u2022 Points details here…</string>
    <string name="text_with_bullet2">\u2022 Points details here…</string>
    <string name="text_with_bullet3">\u2022 Points details here…</string>
    <string name="heading_instructions">Instructions</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="btn_add_text">Add</string>
    <string name="check_in_content">Your check in is due today.</string>
    <string name="submmit_check_in">Submit my check in</string>
    <string name="current_weight">Current Weight</string>
    <string name="next_txt">Next</string>
    <string name="check_in_questionare">Check In Questionnaire</string>
    <string name="submit_photos">Submit Photos</string>
    <string name="heading_front">Front</string>
    <string name="heading_side">Side</string>
    <string name="heading_back">Back</string>
    <string name="prev_txt">Prev</string>
    <string name="meal_note">Upgrade to premium custom nutrition choice. You will be working on with a nutritionist.</string>
    <string name="buy_now">Buy Now !</string>
    <string name="price_per_month">$ 199 / month</string>
    <string name="create_for_me">Create for me</string>
    <string name="questionnare">Questionnaire</string>
    <string name="questionnare_content">Your plan have been upgraded. Please fill out the questionnaire so we can create your plan accurably.</string>
    <string name="questionnare_content1">Please allow 48 hours for your meal plan to be ready.</string>
    <string name="pound">Pound</string>
    <string name="recipe_library">Recipe Library</string>
    <string name="heading_filter_by">Filter by</string>
    <string name="weekly_mindset_task">Weekly Mindset Task</string>
    <string name="journal">Journal</string>
    <string name="education">Education</string>
    <string name="heading_weekly_mindset_task">Weekly Mindset Task</string>
    <string name="heading_task_name">Task Name</string>
    <string name="heading_duration">Duration : 20 MIN</string>
    <string name="btn_start_text">Start</string>
    <string name="heading_title">Title</string>
    <string name="text_dummy">20-05-2020 by Admin - Fitness</string>
    <string name="heading_recent_blog">Recent Blog</string>
    <string name="mindet_journal">Mindset Journal</string>
    <string name="heading_thought">Current thoughts</string>
    <string name="heading_how_are_your_energy">How are your energy levels today?</string>
    <string name="heading_how_much_sleep">How much Sleep did you get last night?</string>
    <string name="heading_greatful">What are you grateful for?</string>
    <string name="heading_write_down">Write down 3 work related goals that need to be achieved today.</string>
    <string name="heading_challenges">Challenges</string>
    <string name="leaderboard">Challenge Leaderboard</string>
    <string name="steps_target">Step Targets</string>
    <string name="gym_based_challenge">Gym based Challenge</string>
    <string name="home_based_challenge">Home based Challenge</string>
    <string name="heading_challenge_name">Challenge Name</string>
    <string name="heading_challenges1">Challenges-1</string>
    <string name="heading_challenges2">Challenges-2</string>
    <string name="heading_challenges3">Challenges-3</string>
    <string name="heading_challenges4">Challenges-4</string>
    <string name="seconds">Seconds</string>
    <string name="heading_time">Time</string>
    <string name="beat_your_time">Beat Your Time</string>
    <string name="heading_congrats">Congrats you have been beaten your time.</string>
    <string name="attempt_one">Attempt-1</string>
    <string name="attempt_two">Attempt-2</string>
    <string name="submit_to_leaderboard">Submit My Time to Public Leaderboard</string>
    <string name="public_leaderboard">Public Leaderboard</string>
    <string name="heading_photos">Photo</string>
    <string name="name">Name</string>
    <string name="point">Point</string>
    <string name="rank">Rank</string>
    <string name="set_goal">Set Your Goal</string>
    <string name="today_targets">Today Targets</string>
    <string name="overall_calories">Overall Calories</string>
    <string name="loading">Loading...</string>
    <string name="btn_calculate_text">Calculate Macros Data</string>
    <string name="btn_view_meal_text">View Meal</string>
    <string name="heading_moderate">Modrate</string>
    <string name="heading_high">High</string>
    <string name="heading_meal1">Meal Name</string>
    <string name="heading_home_challenges">Challenge 1</string>
    <string name="btn_view_text">View</string>

    <string-array name="filter_list">
        <item>Filter</item>
        <item>No Restrication</item>
        <item>Vegeterian</item>
        <item>Vegan</item>
        <item>Peseetariay</item>
        <item>Keto</item>
        <item>Lactose Intolrate</item>
    </string-array>
</resources>
