<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSubmit"
        android:layout_marginBottom="@dimen/dim_12"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tvHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="@dimen/dim_12"
                android:fontFamily="@font/mulisemibold"
                android:gravity="center_vertical"
                android:justificationMode="inter_word"
                android:text="Hawaiian Pizza"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/universal_text_size22" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvHeading"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/card_view_image"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/meal_banner" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_4"
                android:layout_marginBottom="@dimen/dim_4"
                android:layout_below="@+id/cvImage"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulisemibold"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="@string/heading_cource"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="@string/heading_dinner"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulisemibold"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="@string/heading_keyword"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="@string/italian_pizza"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulisemibold"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="@string/heading_calories"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="-250 Kal"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulisemibold"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="@string/heading_category"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:text="-Dinner"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulisemibold"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dim_6"
                    android:paddingBottom="@dimen/dim_8"
                    android:paddingTop="@dimen/dim_8"
                    android:layout_marginTop="@dimen/dim_12"
                    android:text="@string/heading_ingratians"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/universal_text_size16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:paddingStart="@dimen/dim_8"
                        android:text="@string/text_with_bullet1"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:paddingStart="@dimen/dim_8"
                        android:text="@string/text_with_bullet1"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:paddingStart="@dimen/dim_8"
                        android:text="@string/text_with_bullet1"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulisemibold"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dim_6"
                    android:paddingBottom="@dimen/dim_8"
                    android:paddingTop="@dimen/dim_8"
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/dim_12"
                    android:text="@string/heading_instructions"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/universal_text_size16" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center_vertical"
                        android:paddingBottom="@dimen/dim_8"
                        android:text="@string/lorem"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulibold"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/dim_6"
                    android:paddingBottom="@dimen/dim_8"
                    android:paddingTop="@dimen/dim_8"
                    android:textAllCaps="true"
                    android:layout_marginTop="@dimen/dim_12"
                    android:text="@string/heading_nutrition"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/universal_text_size14" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mulilight"
                        android:gravity="center_vertical"
                        android:lineSpacingExtra="@dimen/dim_6"
                        android:paddingBottom="@dimen/dim_8"
                        android:paddingTop="@dimen/dim_8"
                        android:text="Serving 1 Slice | Cal-250 | Catb-33g | Protein-9gm | Fat 9g"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/universal_text_size16" />

                </LinearLayout>
            </LinearLayout>



        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/dim_4"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/mulisemibold"
        android:paddingStart="@dimen/dim_8"
        android:paddingEnd="@dimen/dim_8"
        android:text="@string/btn_add_text"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/universal_text_size14"
        android:visibility="visible" />

</RelativeLayout>