<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/dim_32"
   >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_12"
        android:letterSpacing="0.1"
        android:layout_marginEnd="@dimen/dim_12"
        android:layout_marginBottom="@dimen/dim_12"
        android:fontFamily="@font/mulimedium"
        android:gravity="center_horizontal"
        android:justificationMode="inter_word"
        android:text="@string/check_in"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/universal_text_size18" />
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


        <TextView
            android:id="@+id/tvSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_32"
            android:layout_marginBottom="@dimen/dim_12"
            android:fontFamily="@font/mulisemibold"
            android:gravity="center_horizontal"
            android:justificationMode="inter_word"
            android:text="@string/check_in_content"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/universal_text_size16" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSubHeading"
            android:layout_centerVertical="true"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="@dimen/dim_8"
            android:background="@drawable/et_border_fill_accent"
            android:fontFamily="@font/mulisemibold"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingStart="@dimen/dim_8"
            android:paddingEnd="@dimen/dim_8"
            android:text="@string/submmit_check_in"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/universal_text_size14"
            android:visibility="visible" />


    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
</RelativeLayout>