<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="32dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:layout_marginBottom="@dimen/dim_12"
        android:fontFamily="@font/mulimedium"
        android:gravity="center_horizontal"
        android:justificationMode="inter_word"
        android:text="@string/heading_challenges"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/universal_text_size18" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeading"
        android:layout_marginTop="@dimen/dim_12">

        <LinearLayout
            android:id="@+id/llGymBased"
            android:layout_width="@dimen/dim_170"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_24"
            android:background="@drawable/circle_shape"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/dim_70"
                android:layout_height="@dimen/dim_70"
                android:layout_gravity="center"
                android:src="@drawable/gym" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8"
                android:fontFamily="@font/mulisemibold"
                android:gravity="center"
                android:padding="@dimen/dim_4"
                android:text="@string/gym_based_challenge"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/universal_text_size16" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llHomeBased"
            android:layout_width="@dimen/dim_170"
            android:layout_height="wrap_content"
            android:padding="@dimen/dim_24"
            android:layout_marginTop="@dimen/dim_12"
            android:layout_below="@+id/llGymBased"
            android:background="@drawable/circle_shape"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">


            <ImageView
                android:layout_width="@dimen/dim_70"
                android:layout_height="@dimen/dim_70"
                android:layout_gravity="center"
                android:src="@drawable/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_8"
                android:fontFamily="@font/mulisemibold"
                android:gravity="center"
                android:padding="@dimen/dim_4"
                android:text="@string/home_based_challenge"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/universal_text_size16" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_8"
            android:fontFamily="@font/sinkinsanslight"
            android:background="@drawable/circle_black"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:lineSpacingExtra="@dimen/dim_6"
            android:padding="@dimen/dim_4"
            android:text="@string/and"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/universal_text_size18" />

    </RelativeLayout>

</RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>